# sab-ia

./: Dockerfile  README.md  pyproject.toml
src/sab_ia/: main.py
src/sab_ia/api/routes/: __init__.py  predictions.py
src/sab_ia/services/: __init__.py  prediction_service.py
tests/: test_prediction_service.py
