[project]
name = "sab_ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Joás",email = "cabraljrjoas@tutanota.com"}
]
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "birdnet (>=0.1.7,<0.2.0)"
]

[tool.poetry]
packages = [{include = "sab_ia", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
